# logbook_robot

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yml  pyproject.toml
src/bot/: config.py  enums.py  main.py
src/bot/handlers/: callbacks.py  errors.py  start.py
src/bot/internal/: logging_config.py  notify.py  ui.py
src/bot/keyboards/: inline.py
src/bot/middlewares/: auth.py  logging.py  session.py  updates_dumper.py
src/database/: db.py  models.py
src/database/crud/: item.py  user.py
